# coro-http

./: .gitmodules  CMakeLists.txt  bootstrap.sh  vcpkg-configuration.json  vcpkg.json
cmake/: EmbedResource.cmake  EmbedResourceImpl.cmake  coro-http-config.cmake.in  embed_resource.cmake  embed_resource_impl.cmake
contrib/: CMakeLists.txt
contrib/patches/: CMake-add-CURL_ENABLE_EXPORT_TARGET-option.patch  curl-adjust-cmake-file.patch  libevent-don-t-override-CMAKE_CONFIGURATION_TYPES.patch
examples/: CMakeLists.txt  client.cc  nfs_server.cc  server.cc
examples/base/: CMakeLists.txt  main.cc
src/: CMakeLists.txt
src/coro/: CMakeLists.txt  exception.cc  exception.h  generator.h  interrupted_exception.h  mutex.cc  mutex.h  promise.h  semaphore.h  shared_promise.h  stop_callback.h  stop_source.cc  stop_source.h  stop_token.cc  stop_token.h  task.h  wait_task.cc  wait_task.cpp  wait_task.h  when_all.h
src/coro/http/: CMakeLists.txt  cache_http.cc  cache_http.h  curl_http.cc  curl_http.h  http.cc  http.h  http_body_generator.h  http_exception.cc  http_exception.h  http_parse.cc  http_parse.h  http_server.cc  http_server.h  http_server_context.cc  http_server_context.h
src/coro/rpc/: rpc_exception.cc  rpc_exception.h  rpc_server.cc  rpc_server.h
src/coro/stdx/: CMakeLists.txt  any_invocable.h  bind_front.h  concepts.h  coroutine.h  source_location.cc  source_location.h  stacktrace.cc  stacktrace.h  stop_callback.h  stop_source.cc  stop_source.h  stop_token.cc  stop_token.h
src/coro/util/: CMakeLists.txt  base_server.cc  base_server.h  event_loop.cc  event_loop.h  for_each.h  function_traits.h  lru_cache.h  make_pointer.h  raii_utils.h  regex.h  stop_token_or.h  tcp_server.cc  tcp_server.h  thread_pool.cc  thread_pool.h  type_list.h  wrap.h
test/: CMakeLists.txt  http_server_test.cc  test_main.cc
